Fix Modal Dark Mode
Fixes TryGhost/Ghost#13432

--- a/app/styles/app-dark.css
+++ b/app/styles/app-dark.css
@@ -449,7 +449,7 @@ input:focus,
     background: #000;
 }
 
-.modal-content {
+.modal-content, .epm-modal .modal-content {
     background: var(--whitegrey);
 }
 
